@@ -1,5 +1,8 @@
 1.3 beta
 ========
+(Jozsef Marton)
+- SF Patch #1196103 Set the content type in the HTTP header
+
 (Richard Rodgers)
 - SF Patch #1189665 Custom Submission Patch for handling null qualifier and page flow metadata issue
 
